--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.40.2
+streamlit==1.50.0
 Pillow==9.5.0
-torch==2.5.1+cu118
-torchvision==0.20.1+cu118
+torch==2.9.0
+torchvision==0.24.0
